# bato

./: .gitignore  Cargo.toml  LICENSE  README.md  bato.toml  bato.yaml  build.rs
.github/workflows/: deploy.yml  rust.yml  test.yml
.pkg/arch/: PKGBUILD
.pkg/aur/: PKGBUILD  update.sh
libnotilus/: CMakeLists.txt
libnotilus/include/: notilus.h
libnotilus/src/: notilus.c
src/: battery.rs  cli.rs  config.rs  fsm.rs  lib.rs  main.rs  notify.rs  signal.rs  trace.rs  util.rs
src/fsm/: fsm.rs  fsm_impl.rs  mod.rs
src/fsm/states/: charging.rs  critical.rs  discharging.rs  full.rs  low.rs  mod.rs  not_charging.rs
