[package]
name = "bato"
version = "0.2.2"
description = "A program to send battery level notifications"
authors = ["pierre <dommerc.pierre@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", features = [
    "tracing-log",
    "env-filter",
] }
tracing-appender = "0.2"
signal-hook = "0.4"
once_cell = "1.21"
notify-rust = "4.11"
strum = { version = "0.28", features = ["derive"] }

[profile.release]
codegen-units = 1
strip = true
opt-level = "s"
lto = true
